--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,25 +6,18 @@
 }
 
 .NavigationItem a {
-    color: #8f5c2c;
+    color: #8F5C2C;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
     display: block;
-
 }
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    color: #40a4c8;
+    color: #40A4C8;
 }
-
-
-
-
-
-
 
 @media (min-width: 500px) {
     .NavigationItem {
@@ -36,17 +29,17 @@
     }
 
     .NavigationItem a {
+        color: white;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
-
     }
 
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #8f5c2c;
-        border-bottom: 4px solid #40a4c8;
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
         color: white;
     }
 }
