--- a/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -4,11 +4,11 @@
  margin: auto;
 }
 
-@media (min-width: 600px) {
-    .CheckoutSummary {
-        width: 500px;
-    }
-}
+/*@media (min-width: 600px) {*/
+/*    .CheckoutSummary {*/
+/*        width: 500px;*/
+/*    }*/
+/*}*/
 
 
 
